# torchok

./: .flake8  .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.sagemaker  LICENSE  README.md  build_sagemaker.sh  convert_model.ipynb  environment.yml  pyproject.toml  requirements.dev.txt  run_sagemaker.py  test-requirements.txt  test.py  train.py
.ci/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  ci_cd.yml  flake8_checks.yaml  test_checks.yaml  training_test.yml
configs/: leaves_hrnet.yml  leaves_hrnet_w18_manual.yml  retinanet_resnet50.yml  strawberry_cls.yml
docs/source/: callbacks.rst  conf.py  contribute.rst  datasets.rst  examples.rst  getting_started.rst  index.rst  loggers.rst  losses.rst  metrics.rst  models.rst  onnx_export.rst  tasks.rst  transforms_augments.rst  yaml_config.rst
examples/configs/: cifar10.yml  classification_cifar10.yaml  classification_cifar10.yml  classification_cifar10_mlflow.yaml  classification_cifar10_mlflowx.yaml  classification_cifar10_multi_validation.yaml  classification_imagenet.yaml  classification_test.yml  detection.yml  detection_yolox.yml  hierarchical_multilabel_classification.yml  moby.yml  moco.yml  multihead_classification.yml  multilabel_pairwise_toilets.yaml  onnx_infer.yaml  onnx_infer.yml  pairwise_sop.yaml  pairwise_toilets.yaml  representation_arcface_sop.yaml  representation_arcface_sop.yml  representation_sop.yaml  segmentation_sweet_pepper.yaml  segmentator.yml  simclr.yaml  simclr_resnet50_512d.yml  simmim_pretrain_cifar10.yaml  simmim_pretrain_imagenet.yaml  simmim_sop.yaml  swin_segmentator.yml  tico_unsupervise.yaml  triplet_sop.yaml  yolox.yml
examples/notebooks/: CheckDataClass.ipynb  CheckDetectionDataset.ipynb  CheckSegmentationDataset.ipynb  CheckTransforms.ipynb  Eval.ipynb  PrepareData.ipynb  PrepareHierarchicalClassification.ipynb  PrepareHierarchicalMultilabelClass.ipynb  SchedulerVisualization.ipynb  Scheduler_Visualization.ipynb
notebooks/: CheckTransforms.ipynb  Eval.ipynb  LeafSegm.ipynb  MLFlowCleanup.ipynb  PrepareStrawberryDesease.ipynb  StrawberryMultiheadClassificationEval.ipynb
requirements/: docs.txt
src/: __init__.py
src/callbacks/: __init__.py  finalize_logger.py  model_checkpoint_with_onnx.py  upload_weights_after_exception.py
src/constructor/: __init__.py  callbacks.py  config_structure.py  constructor.py  custom_callbacks.py  data.py  freeze.py  load.py  logger.py  loggers.py  loss.py  models.py  optimizers.py  registry.py  runner.py  trainer.py
src/data/: __init__.py
src/losses/: __init__.py  base.py
src/metrics/: __init__.py  classification.py  common.py  detection.py  metric_manager.py  metric_utils.py  metrics_manager.py  representation.py  retrieval.py  segmentation.py  verification.py
src/models/: __init__.py  base.py  base_model.py  identity.py  identity_model.py
src/optim/: __init__.py
src/registry/: __init__.py  registry.py
src/tasks/: __init__.py  base.py  base_task.py  classification.py  classification_task.py  detection_task.py  moby_task.py  momentum_contrastive_task.py  multihead_classification_task.py  onnx.py  segmentation.py  segmentation_task.py  simclr_task.py  strawberry_multihead_cls.py  strawberry_multihead_cls_task.py
tests/: __init__.py
tests/constructor/: test_cifar_config.py  test_ciraf_config.py  test_config_structure.py  test_config_structure_load.py  test_constructor.py  test_constructor_with_conf_structure.py  test_hydra_load.py  test_load_checkpoint.py
tests/data/: test_datasets.py  test_image_classification.py  test_unsupervised_contrastive_dataset.py
tests/datasets/: test_image_classification.py
tests/losses/: test_base_losses.py  test_pml.py
tests/metrics/: __init__.py  data_generator.py  test_detection.py  test_metric_manager.py  test_metrics.py  test_representation.py  test_representation_ddp.py  test_segmentation.py
tests/models/: test_backbone_loader.py  test_backbones.py  test_base_module.py  test_classification.py  test_segmentation.py  test_transformers.py
tests/training_tests/: cifar10_experiment.yaml
torchok/: __init__.py  __main__.py
torchok/callbacks/: __init__.py  checkpoint_onnx.py  finalize_logger.py  freeze_unfreeze.py  model_checkpoint_with_onnx.py
torchok/constructor/: __init__.py  auto_lr_find.py  config_structure.py  constructor.py  freeze.py  load.py  logger.py  registry.py  runner.py
torchok/data/: __init__.py
torchok/losses/: __init__.py  base.py
torchok/metrics/: __init__.py  detection.py  index_base_metric.py  metrics_manager.py  representation.py  (+2 more)
(+489 files in other folders)
