[tool.poetry]
name = "torchok"
version = "0.4.12"
description = "The toolkit for fast Deep Learning experiments in Computer Vision"
readme = "README.md"
authors = [
    "Vlad Vinogradov <vladvin@eora.ai>",
    "Rashit Bayazitov <r.bayazitov@eora.ai>",
    "Vlad Patrushev <patrushev@eora.ai>",
    "Vyacheslav Shults <shulz134700@gmail.com>"
]
homepage = "https://github.com/eora-ai/torchok"
documentation = "https://torchok.readthedocs.io/"
keywords = ["Computer Vision", "Deep Learning", "Neural Networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License"
]
license = "Apache-2.0"

[tool.poetry.dependencies]
albumentations = "1.2.0"
faiss-cpu = "1.7.2"
hydra-core = "~1.2"
numpy = [
    {version = "~1.22", python = ">=3.8,<3.11"},
    {version = "~1.21", python = ">=3.7.1,<3.8"}
]
onnx = "~1.12"
onnxruntime-gpu = "~1.12"
opencv-python = "~4.6"
pandas = [
    {version = "~1.4", python = ">=3.8,<3.11"},
    {version = "~1.3", python = ">=3.7.1,<3.8"}
]
parameterized = "~0.8"
pillow = "~9.1"
python = ">=3.7,<3.11"
pytorch-lightning = "~1.7"
ranx = "~0.2"
torch = "1.12.1"
torchvision = "0.13.1"
torchmetrics = "~0.9"
timm = "~0.6"
mmdet = "2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
