[tool.poetry]
name = "torchok"
version = "0.4.12"
description = "The toolkit for fast Deep Learning experiments in Computer Vision"
readme = "README.md"
authors = [
    "Vlad Vinogradov <vladvin@eora.ai>",
    "Rashit Bayazitov <r.bayazitov@eora.ai>",
    "Vlad Patrushev <patrushev@eora.ai>",
    "Vyacheslav Shults <shulz134700@gmail.com>"
]
homepage = "https://github.com/eora-ai/torchok"
documentation = "https://torchok.readthedocs.io/"
keywords = ["Computer Vision", "Deep Learning", "Neural Networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License"
]
license = "Apache-2.0"

[tool.poetry.dependencies]
albumentations = "1.3.0"
faiss-cpu = "1.7.2"
hydra-core = "~1.2"
imagesize = "1.4.1"
lightly = "~1.4"
mmdet = "3.0.0"
numpy = [
    {version = "~1.22", python = ">=3.8,<3.11"}
]
onnx = "~1.13"
onnxruntime = "~1.14"
opencv-python = "~4.7"
pandas = [
    {version = "~1.4", python = ">=3.8,<3.11"}
]
parameterized = "~0.9"
python = ">=3.8,<3.11"
pytorch-lightning = "~2.0"
ranx = "~0.3"
seaborn = "^0.12.2"
timm = "~0.6"
torch = "2.0.0"
torchvision = "~0.15"
torchmetrics = "~0.11"
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
